--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^8.5.3",
+    "firebase": "^12.6.0",
     "framer-motion": "^12.23.25",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.556.0",
